<resources>
    <string name="app_name">Covidzen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Mapa</string>
    <string name="instructions">Postępowanie</string>
    <string name="home">Start</string>

    <!-- chart labels -->
    <string name="deaths">Zmarli</string>
    <string name="confirmed">Zakażeni</string>
    <string name="recovered">Zdrowi</string>

    <!-- last day stats labels -->
    <string name="last_day">Statystyki na dzień %s</string>
    <string name="last_day_deaths">Zmarło %d osób.</string>
    <string name="last_day_confirmed">Potwierdzono %d zakażeń.</string>
    <string name="last_day_recovered">Wyzdrowiało %d osób.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- map -->
    <string name="exit_zone_dialog">Powrót</string>
    <string name="map_legend">Legenda</string>
    <string name="green_zone_dialog">Zielona strefa</string>
    <string name="orange_zone_dialog">
        - działalność gastronomii możliwa w godzinach 6-21, później wyłącznie na dowóz, zajęty może być co drugi stolik
        - transport publiczny: 50 proc. miejsc siedzących lub 30 proc. wszystkich może być zajętych
        - wesela i imprezy okolicznościowe - maksymalna liczba uczestników to 20 osób, bez zabawy tanecznej (obowiązuje od 19.10)
        - maksymalnie 1 osoba na 4 mkw podczas uroczystości religijnych
        - zgromadzenia publiczne do 25 osób
        - szkoły wyższe i ponadpodstawowe przechodzą w tryb nauki hybrydowej
        - wydarzenia sportowe bez udziału publiczności
        - wydarzenia kulturalne - do 25 proc. udziału publiczności
        - zawieszona działalność basenów, aquaparków, siłowni
    </string>
    <string name="red_zone_dialog">
        - ograniczenie liczby osób w placówkach handlowych do 5 osób na kasę
        - działalność gastronomii w godzinach 6-21, potem tylko na wynos, co drugi zajęty stolik
        - zakaz organizacji imprez okolicznościowych (wesela, stypy) - obowiązuje od 19.10
        - maksymalnie 1 osoba na 7 mkw podczas uroczystości religijnych
        - ograniczenie liczba osób w transporcie publicznym – zajętych może być 50 proc. miejsc siedzących lub 30 proc. liczby wszystkich miejsc
        - zgromadzenia publiczne do 10 osób
        - szkoły wyższe i ponadpodstawowe - nauczanie zdalne (z wyłączeniem zajęć praktycznych)
        - wydarzenia sportowe bez udziału publiczności
        - wydarzenia kulturalne - do 25 proc. udziału publiczności
        - zawieszona działalność basenów, aquaparków, siłowni
    </string>

    <!-- instructions  -->
    <string name="start_test">Diagnozuj stan</string>
    <string name="mz_url">https://www.gov.pl/web/zdrowie</string>
    <string name="mz_twitter_url">https://twitter.com/MZ_GOV_PL</string>
    <string name="mz_facebook_url">https://www.facebook.com/MZGOVPL/</string>
    <string name="vaccinate_url">https://www.gov.pl/web/szczepimysie</string>
    <string name="questionnaire_info">Ankieta wypełniona dnia %s. Stan: %s.</string>

    <!-- questionnaire -->
    <string name="yes_button">Tak</string>
    <string name="no_button">Nie</string>
    <string name="end_button">Zakoncz</string>
    <string name="state_healthy">Nie posiadasz większości objawów zakażania COVID-19</string>
    <string name="state_unsolvable">Nie można jednoznacznie stwierdzić, że jesteś chory</string>
    <string name="state_infected">Powinieneś natychmiast skontaktować się z lekarzem</string>

    <string name="progress" formatted="true">Pytanie nr %d / %d</string>
    <string-array name="range" formatted="true">
        <item>Ostatnie 7 dni</item>
        <item>Ostatnie 14 dni</item>
        <item>Ostatni miesiąc</item>
    </string-array>


    <string name="days_considered_option">Przedział czasu</string>
    <string name="aggregate_option">Dane zagregowane lub z dnia</string>
    <string name="data_type_option">Rodzaj danych</string>

</resources>