<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".instruction.QuestionnaireFragment"
    android:background="@color/white">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sayYes"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="560dp"
        android:backgroundTint="@color/green_light"
        android:text="@string/yes_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded.Left" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sayNo"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_marginEnd="80dp"
        android:text="@string/no_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sayYes"
        app:layout_constraintTop_toTopOf="@+id/sayYes"
        android:backgroundTint="@color/blue_light"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded.Right"
        />

    <TextView
        android:id="@+id/questionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="344dp"
        android:gravity="center"
        android:padding="20sp"
        android:textSize="30sp"
        android:textColor="#444444"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/endButton"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="560dp"
        android:text="@string/end_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="208dp"
        android:layout_height="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:progressTint="@color/light_blue_A200"
        android:progressBackgroundTint="#C3C1C1"/>

    <TextView
        android:id="@+id/progressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/progress"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <ImageView
        android:id="@+id/questionImageView"
        android:scaleType="fitCenter"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>